fix : dark mode text color 수정

--- a/assets/scss/template.scss
+++ b/assets/scss/template.scss
@@ -21,7 +21,7 @@
 
 .dark .content-card-2 {
   background-color: #343a40;
-  color: white;
+  color: #bbdefb;
 
   &:hover {
     background-color: rgb(41, 49, 61); 
@@ -47,6 +47,7 @@
 
 .dark .content-card {
   background-color: #343a40; 
+  color: #bbdefb;
 
   &:hover {
     background-color: rgb(41, 49, 61); 
